[gd_scene load_steps=4 format=2]

[ext_resource path="res://images/Bomb/97e72713-2bff-4c71-9216-30a72a6452c1.png" type="Texture" id=1]
[ext_resource path="res://PowerUps/Bombs/BombPile.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 39.0969

[node name="BombPile" type="Node2D"]
script = ExtResource( 2 )

[node name="Icon" type="Sprite" parent="."]
position = Vector2( 51.9181, -11.2777 )
texture = ExtResource( 1 )
offset = Vector2( -51.4041, 6.26575 )

[node name="Bomb1" type="Sprite" parent="."]
position = Vector2( -8.0674, -5.12075 )
texture = ExtResource( 1 )
offset = Vector2( 1.3, -3 )

[node name="Bomb2" type="Sprite" parent="."]
position = Vector2( 9.12257, -4.77443 )
texture = ExtResource( 1 )
offset = Vector2( 1.3, -3 )

[node name="Bomb3" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 1.3, -3 )

[node name="Bomb4" type="Sprite" parent="."]
position = Vector2( -5.0302, 4.68917 )
texture = ExtResource( 1 )
offset = Vector2( 1.3, -3 )

[node name="Bomb5" type="Sprite" parent="."]
position = Vector2( 8.78153, 4.26288 )
texture = ExtResource( 1 )
offset = Vector2( 1.3, -3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
